update readme and add screenshots

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "D-Task",
-  "version": "0.0.1",
+  "name": "DailyTask",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
