--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,8 +80,8 @@ android {
         applicationId "com.dtaskapp"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 103
+        versionName "1.0.3"
         resConfigs "en", "US"
     }
     signingConfigs {
@@ -105,11 +105,10 @@ android {
             signingConfig signingConfigs.debug
         }
         release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
+            minifyEnabled true
             signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
-            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
@@ -118,6 +117,7 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
     implementation("com.facebook.react:flipper-integration")
+    implementation project(':react-native-splash-screen')
     
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
