--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-community/geolocation": "^3.1.0",
     "@react-native-community/push-notification-ios": "^1.11.0",
+    "@react-native-google-signin/google-signin": "^14.0.1",
     "@react-navigation/bottom-tabs": "6.x",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
@@ -40,7 +41,6 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-google-signin": "^2.1.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-notifier": "^1.9.0",
@@ -48,6 +48,7 @@
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.11.1",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.0.4",
