add Pomodoro screen, change icons

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-i18next": "^15.4.0",
     "react-native": "0.73.1",
     "react-native-android-location-enabler": "^2.0.1",
+    "react-native-circular-progress": "^1.4.1",
     "react-native-code-push": "^8.2.1",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-fs": "^2.20.0",
