--- a/ios/ToDoApp/Info.plist
+++ b/ios/ToDoApp/Info.plist
@@ -50,7 +50,8 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Roboto-Regular.ttf</string>
-		<string>ShadowsIntoLight-Regular.ttf</string>
+		<string>Roboto-Black.ttf</string>
+		<string>Roboto-Bold.ttf</string>
 	</array>
 </dict>
 </plist>
