--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-google-signin/google-signin": "^14.0.1",
     "@react-navigation/bottom-tabs": "6.x",
     "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/material-top-tabs": "^7.3.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.0.1",
@@ -29,6 +30,7 @@
     "@types/react-native-push-notification": "^8.1.4",
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.6.6",
+    "date-fns": "^4.1.0",
     "i18next": "^24.2.1",
     "moment": "^2.30.1",
     "nanoid": "^5.1.0",
@@ -45,6 +47,7 @@
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-notifier": "^1.9.0",
+    "react-native-pager-view": "^6.8.1",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.8.2",
