--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DailyTask",
+  "name": "dailytask",
   "version": "1.0.1",
   "private": true,
   "scripts": {
@@ -22,7 +22,6 @@
     "@react-native-google-signin/google-signin": "^14.0.1",
     "@react-navigation/bottom-tabs": "6.x",
     "@react-navigation/drawer": "^6.6.6",
-    "@react-navigation/material-top-tabs": "^7.3.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.0.1",
@@ -39,7 +38,6 @@
     "react-native": "0.73.1",
     "react-native-android-location-enabler": "^2.0.1",
     "react-native-circular-progress": "^1.4.1",
-    "react-native-code-push": "^8.2.1",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.0",
@@ -47,7 +45,6 @@
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-notifier": "^1.9.0",
-    "react-native-pager-view": "^6.8.1",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.8.2",
