--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-gesture-handler": "^2.27.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-mobile-ads": "^15.4.0",
+    "react-native-mmkv": "^3.3.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.1",
